# AdventOfCode

day01/app/: Main.hs
day02/: day2.cabal
day02/app/: Main.hs
day03/app/: Main.hs
day04/: day4.cabal
day04/app/: Main.hs
day05/app/: Main.hs
day06/: day6.cabal
day09/: day9.cabal
day1/: day1.cabal
day1/app/: Main.hs
day10/: day10.cabal
day10/app/: Main.hs
day11/: day11.cabal
day11/app/: Main.hs
day2/app/: Main.hs
day3/: day3.cabal
day3/app/: Main.hs
day5/: day5.cabal
day6/app/: Main.hs
day7/: day7.cabal
day7/app/: Main.hs
day8/: day8.cabal
day8/app/: Main.hs
day9/app/: Main.hs
