cabal-version:   3.0
name:            day8
version:         0.1.0.0
license:         NONE
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
    ghc-options: -Wall

executable day8
    import:           warnings
    main-is:          Main.hs
    build-depends:    base ^>=4.19.0.0,
                      containers
    hs-source-dirs:   app
    default-language: Haskell2010
